<resources>
    <string name="app_name">funOn</string>
    <string name="sub_title">Transforming Pharmaceutical &amp; medical supply chain</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Login</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="create_now">Create now</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About Us</string>
    <string name="terms">Terms of Service</string>
    <string name="contact">Contact Us</string>
    <string name="pr1"> This privacy policy (“Privacy Policy”) is subject to the terms of use of the Website and/or Application (both defined below) (“Terms of Use”), and comes into effect from the date and time a user (“User”) accesses the Website or Application, and accepts the Terms of Use laid out therein. By using the Zomeds Website (the “Website”) and/or the Zomeds mobile application (the “Application”), the User consents to collection, storage, and use of the personal information you provide (including any changes thereto as provided by the User) for any of the services that Zomeds offers.</string>
    <string name="pr2"> Our Privacy Policy sets out how Zomeds (“Zomeds/We/Our”) collects, use, share and protect information in relation to the services provided through the Website (collectively, the “Service”), and your choices about the collection and use of your information.</string>
    <string name="pr3"> By using our Service you understand and accept this privacy policy along with any amendments or modifications as may be made from time to time (“Privacy Policy”) and thereby expressly consent to our collection, use and disclosure of Personal Information (as defined below) in accordance with this Privacy Policy. If you are not agreeable to this, please do not use this Application and/or Website or Services.</string>
    <string name="pr4"> In the course of providing the Services to you, Zomeds collects the following information (“Personal Information”):</string>
    <string name="pr5"> Personal information such as your username, password, e-mail address and phone number when you register for a Zomeds account.</string>
    <string name="pr6"> We may automatically collect some information about your hardware devices when you access Zomeds. For example, when you utilize our applications, we may collect your internet protocol (“IP”) address and the type of mobile device you use and your geographic location. We also may collect information about your activity on Zomeds, such as information about your account usage, as well as information about how you interact with the Application and/or Website. We may combine this automatically-gathered information with other information, including personal information we have collected about you.</string>
    <string name="pr7"> We may receive and store certain types of information known as “cookies” when you accesses the Application and/or Website.</string>
    <string name="pr8"> Communications between you and Zomeds, and you and other users of Zomeds.</string>
    <string name="pr9"> If you choose to post reviews, comments, or leave feedback for other users, we will collect that information you provide to us. We retain this information as necessary to resolve disputes, provide customer support and troubleshoot problems as permitted by law.</string>
    <string name="pr10"> The Website may contain links to and from the websites of our partner networks, advertisers and other third parties. If you follow a link to any of these websites, please note that they have their own privacy policies and that we do not accept any responsibility or liability for these policies. We have no control over the privacy practices or the content of any of our business partners, advertisers, sponsors, or other websites to which we provide links. Please check these policies before you submit any personal data to these websites.</string>
    <string name="pr11"> In order to provide a personalised browsing experience, Zomeds may collect information from the User, and the User agrees that Zomeds may use such information to improve its marketing and promotional efforts, to analyse usage, improve the content of Zomeds, product offerings, and to customise Zomeds’s content, layout, and services, in order to improve Zomeds and better tailor it to meet the needs of the User.</string>
    <string name="pr12"> To extend this personalized experience, Zomeds may track the IP address of a User’s device and save certain User data on the User’s device in the form of cookies. Zomeds uses this data to deliver web pages to the User upon request, to customize the site to the interests of the User, to measure traffic within the Application and/or Website, and let advertisers and other users know the geographic locations of the User. In the event some portion of the User data provided by a User to Zomeds is personal or sensitive in nature, such data will not be provided to third parties without previous consent of the user concerned. User data of a general nature such as demographics may however be revealed to external parties.</string>
    <string name="pr13"> We use or may use the data collected through cookies, log file, device identifiers, location data and clear gifs information to: (a) remember information so that you will not have to re-enter it during your visit or the next time you visit the site; (placeall) provide custom, personalized content and information, including advertising; (c) provide and monitor the effectiveness of our Services; (d) monitor aggregate metrics such as total number of visitors, traffic, usage, and demographic patterns on our website and our Services; (e) diagnose or fix technology problems; and (f) otherwise to plan for and enhance our service.</string>
    <string name="pr14"> We use third-party analytics tools to help us measure traffic and usage trends for the Services. These tools collect information sent by your device or our Services, including the web pages you visit, add-ons, and other information that assists us in improving the Services. We collect and use this analytics information with analytics information from other Users so that it can not reasonably be used to identify any particular individual User.</string>
    <string name="pr15"> In order to facilitate communications between you, and other Zomeds users.</string>
    <string name="pr16"> We may share Personal Information (including but not limited to, information from cookies, log files, device identifiers, location data, and usage data) with businesses that are legally part of the same group of companies that Zomeds is part of, or that become part of that group (“Affiliates”). Affiliates may use this information to help provide, understand, and improve the Service (including by providing analytics) and Affiliates’ own services (including by providing you with better and more relevant experiences).</string>
    <string name="pr17"> We also may share your information as well as information from tools like cookies, log files, and device identifiers and location data, with third-party organizations that help us provide the Services to you. Our service providers will be given access to your information as is necessary to provide the Services under generally accepted terms of confidentiality.</string>
    <string name="pr18"> Some of the services that are offered through the Website may be provided by third-party providers. We also outsource some of Zomeds’s functions to third-party providers, such as technical and customer support, tracking and reporting functions, quality assurance testing, payment processing functions, and other services. We may share information from or about you with these third-party providers so that they can perform their services or complete your requests.</string>
    <string name="pr19"> We may share information from or about you (such as your age and gender) and your use of the Website with businesses on Zomeds. You may adjust your settings to increase or decrease the amount of information we share. You can view these settings and find more details about what information may be shared here.</string>
    <string name="pr20"> We may remove parts of data that can identify you and share anonymized data with other parties. We may also combine your information with other information in a way that it is no longer associated with you and share that aggregated information.</string>
    <string name="pr21"> Any information or content that you voluntarily disclose for posting to the Application and/or Website becomes available to the public. Once you have shared such information or made it public,the same may be re-shared by others.</string>
    <string name="pr22"> If you remove information that you posted to the Application and/or Website, copies may remain viewable in cached and archived pages of the Application and/or Website, or if other users or third parties using the Application and/or Website have copied or saved that information.</string>
    <string name="pr23"> Zomeds may share sensitive personal information of a User with any third party without obtaining the prior consent of the User in the following limited circumstances:</string>
    <string name="pr24"> When it is requested or required by law or by any court or governmental agency or authority to disclose, for the purpose of verification of identity, or for the prevention, detection,investigation including cyber incidents, or for prosecution and punishment of offences. These disclosures are made in good faith and belief that such disclosure is reasonably necessary for enforcing the Terms of Use, this Privacy Policy, or for complying with the applicable laws and regulations.</string>
    <string name="pr25"> Zomeds proposes to share such information within its group companies and officers and employees of such group companies forthe purpose of processing personal information on its behalf. Zomeds also ensures that the recipients of such information agree to process such information based on our instructions and in compliance with this Privacy Policy and any other appropriate confidentiality and security measures.</string>
    <string name="pr26"> We have implemented procedures to help protect the information that you provide to us. However, no method of transmitting or storing electronic data is ever completely secure, and we can not guarantee that such information will never be accessed, used, or released in a manner that is inconsistent with this policy. We expressly disclaim any representation or warranty, whether express or implied, with respect to ensuring, guaranteeing, or otherwise offering any definitive promise of security in connection with your Personal Information. THE USER IS RESPONSIBLE FOR MAINTAINING THE SECRECY OF YOUR ACCOUNT INFORMATION AT ALL TIMES.</string>
    <string name="pr27"> The User is solely responsible for maintaining confidentiality of the User’s password and User identification. The User shall be solely responsible for all activities and transmission performed by the User through his User identification. Zomeds assumes no responsibility or liability for their improper use of information relating to such usage of credit cards and/or debit cards by the User, whether online or off-line.</string>
    <string name="pr28"> Zomeds may change or amend this Privacy Policy from time to time to incorporate necessary future changes. Zomeds use of User Data shall be in adherence with consistent with the provisions of the relevant privacy policy under which the information was collected, regardless of new or conflicting provisions in an updated Privacy Policy.</string>
</resources>