<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"
            android:visible="true"
            />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:visible="true"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_activechem"
            android:icon="@drawable/ic_warehouse"
            android:visible="true"
            android:title="Venues" />
     <!--   <item
            android:id="@+id/nav_placeorder"
            android:icon="@drawable/ic_bookorder"
            android:title="@string/placeordernav"
            android:visible="true"/>-->
        <item
            android:id="@+id/nav_ordermanage"
            android:icon="@drawable/ic_ordermanage"
            android:title="Slot Management"
            android:visible="true"/>

        <item
            android:id="@+id/nav_invoicelist"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="Slot Timings"
            android:visible="true"/>

        <item
            android:id="@+id/nav_distributor"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="Preferred Organisers"
            android:visible="true"/>


    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_security_black_24dp"
                android:title="Privacy Policy" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_content_copy_black_24dp"
                android:title="@string/terms" />
        </menu>
    </item>

</menu>
