<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OptionActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:src="@drawable/zomedsmlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        android:background="@drawable/logo_bg"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/DarkBlue"
        android:typeface="serif"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:layout_below="@id/text"
        android:textColor="@color/grey_700"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <Button
        style="@android:style/Widget.Holo.Button.Small"
        android:id="@+id/sign_up_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/sign_in_btn"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:background="@drawable/sign_up_bg"/>

    <Button
        style="@android:style/Widget.Holo.Button.Small"
        android:id="@+id/sign_in_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/color_button_dark"
        android:background="@drawable/sign_in_bg"/>


</RelativeLayout>